Bug 357409 - KDEInit could not launch '/usr/bin/kjumpingcube'
Summary: KDEInit could not launch '/usr/bin/kjumpingcube'
Status: RESOLVED FIXED
Alias: None
Product: kjumpingcube
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Ian Wadham
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-02 00:38 UTC by André Marcelo Alvarenga
Modified: 2016-03-20 13:35 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2016-01-02 00:38:41 UTC
This error is displayed in a dialog when I close Kjumpingcube lauched from Kickoff and Kicker .

Reproducible: Always




Using Manjaro Linux - KDE Applications 15.12 and Frameworks 5.17.
Comment 1 Andreas Sturmlechner 2016-03-20 13:35:48 UTC
Git commit 28b582eae919ee8187c8c466d0b13403a687f6e2 by Andreas Sturmlechner.
Committed on 20/03/2016 at 12:51.
Pushed by asturmlechner into branch 'Applications/16.04'.

Unbreak startup
REVIEW: 127399

M  +1    -0    CMakeLists.txt
M  +3    -0    main.cpp

http://commits.kde.org/kjumpingcube/28b582eae919ee8187c8c466d0b13403a687f6e2