Unbreak startup

BUG: 357409
REVIEW: 127399